--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,16 @@
             <artifactId>javafaker</artifactId>
             <version>0.12</version>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.opencsv</groupId>-->
+            <!--<artifactId>opencsv</artifactId>-->
+            <!--<version>3.9</version>-->
+        <!--</dependency>-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.5</version>
+        </dependency>
     </dependencies>
 
 
